force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/Underground_Estimate_Item_mdt__mdt.object-meta.xml
<CustomObject>
    <label>Underground Estimate Item</label>
    <pluralLabel>Underground Estimate Items</pluralLabel>
</CustomObject>