force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/fields/Column_Side__c.field-meta.xml
<CustomField>
    <fullName>Column_Side__c</fullName>
    <label>Column Side</label>
    <length>20</length>
    <type>Text</type>
</CustomField>