force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/fields/Default_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Amount__c</fullName>
    <label>Default Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>