force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/fields/Default_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Default_Unit_Price__c</fullName>
    <label>Default Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>