force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/fields/Is_Comment_Row__c.field-meta.xml
<CustomField>
    <fullName>Is_Comment_Row__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Comment Row</label>
    <type>Checkbox</type>
</CustomField>