force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/fields/Is_Indent__c.field-meta.xml
<CustomField>
    <fullName>Is_Indent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Indent</label>
    <type>Checkbox</type>
</CustomField>