force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>