force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/fields/Sheet_Number__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Number__c</fullName>
    <label>Sheet Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>