force-app/main/default/objects/Underground_Estimate_Item_mdt__mdt/fields/Unit_Price_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Field_Type__c</fullName>
    <defaultValue>&apos;Currency&apos;</defaultValue>
    <label>Unit Price Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
                <default>true</default>
                <label>Currency</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>